--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,23 @@
-/* @tailwind base; */
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  align-content: center;
-  justify-content: center;
+  background-color: rgb(190, 248, 255);
 }
 
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+  fieldset {
+  }
+  legend {
+  }
+}
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
