--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,9 +8,20 @@ body {
 
 @layer base {
   h1 {
-    @apply text-2xl;
+    @apply text-4xl;
+    @apply font-bold;
   }
   h2 {
-    @apply text-xl;
+    @apply text-2xl;
+  }
+  label {
+    @apply text-2xl;
+  }
+  input {
+    @apply h-12;
+    @apply text-2xl;
+  }
+  p {
+    @apply text-2xl;
   }
 }
